--- a/web1/src/app/admin/company-login-history/company-login-history.component.html
+++ b/web1/src/app/admin/company-login-history/company-login-history.component.html
@@ -65,7 +65,7 @@
                             </div> 
                             <div class="col-md-2">
                                 <button class="me-3" mat-raised-button color="primary"> Search</button>
-                                <button  type="button" mat-raised-button color="warn"> Reset</button>
+                                <button  type="button" mat-raised-button color="warn" (click)="FromReset()"> Reset</button>
                             </div>
                             
                         </div>
