--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -387,7 +387,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Discount%</mat-label>
                         <input matInput type="number" min="0" name="Discount" [(ngModel)]="BillItem.DiscountPercentage"
-                            (blur)="calculations('DiscountPercentage', 'discount')" [required]=true #Discountcontrol
+                            (blur)="calculations('DiscountPercentage', 'discount')" [required]=true #Discountcontrolcontrol
                             [autocomplete]="false">
                         <mat-error>
                             Discount is required
@@ -397,8 +397,8 @@
                 <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0 col-1Modify">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Discount amt</mat-label>
-                        <input matInput type="number" min="0" name="DiscountAmt" [(ngModel)]="BillItem.DiscountAmount"
-                            (blur)="calculations('DiscountAmount', 'discount')" [required]=true #Discountcontrol
+                        <input matInput type="number" min="0" name="DiscountAmount" [(ngModel)]="BillItem.DiscountAmount"
+                            (blur)="calculations('DiscountAmount', 'discount')" [required]=true #DiscountAmountcontrol
                             [autocomplete]="false">
                     </mat-form-field>
                 </div>
@@ -858,7 +858,7 @@
                 <div class="col-xl-1 col-lg-1 col-md-2 col-4  mb-0 col-1ModifyB" *ngFor="let gst of gst_detail">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label class="cus-label">{{gst.GSTType}}</mat-label>
-                        <input matInput name="igstAmt" value="{{gst.Amount}}" disabled>
+                        <input matInput name="igstAmt" value="{{gst.Amount.toFixed(2)}}" disabled>
                         <mat-error>
                             TAX Amt is required
                         </mat-error>
@@ -1207,7 +1207,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label style="color: rgb(255 0 0) !important;letter-spacing: 1px; font-weight: 800;">Balance</mat-label>
                         <input class="redclass" type="number" min="0" style="color: rgb(255 0 0 / 75%) !important;"
-                            matInput name="Total Amount" value="{{ this.applyPayment.PayableAmount}}" disabled
+                            matInput name="Total Amount" value="{{ this.applyPayment.PayableAmount.toFixed(2)}}" disabled
                             #TOutstandingcontrol [autocomplete]="false">
                     </mat-form-field>
                 </div>
