--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -146,7 +146,7 @@
 
             <!-- customer power start -->
             <% if (data.ShowPower === true){%>
-                <section class="power_spec" >
+                <section class="power_spec" style="zoom: 120%;">
                     <% if(data.EyeMeasurement !== null && data.EyeMeasurement.length !== 0){ data.EyeMeasurement.forEach(function (i, index) { %>
                     <table class="tbl0">
                        <tr style="background-color: rgb(211, 211, 211);">
