--- a/web1/src/app/admin/company-login-history/company-login-history.component.html
+++ b/web1/src/app/admin/company-login-history/company-login-history.component.html
@@ -88,13 +88,13 @@
                                     </thead>
                                     <tbody>
                                         <tr class="text-center" *ngFor="let data of dataList  ; let i = index;">
-                                            <td class="text-left">{{dataList.length - i }}</td>
-                                            <td class="text-left">{{data.UserName}}</td>
-                                            <td class="text-left">{{data.UserGroup}}</td>
-                                            <td class="text-left">{{data.CompanyName}}</td>
-                                            <td class="text-left">{{data.IpAddress}}</td>
-                                            <td class="text-left">{{dateFormat(data.LoginTime)}}</td>
-                                            <td class="text-left">{{data.Comment }}</td>
+                                            <td class="text-left" [ngStyle]="data.rowColorStyle">{{dataList.length - i }}</td>
+                                            <td class="text-left" [ngStyle]="data.rowColorStyle">{{data.UserName}}</td>
+                                            <td class="text-left" [ngStyle]="data.rowColorStyle">{{data.UserGroup}}</td>
+                                            <td class="text-left" [ngStyle]="data.rowColorStyle">{{data.CompanyName}}</td>
+                                            <td class="text-left" [ngStyle]="data.rowColorStyle">{{data.IpAddress}}</td>
+                                            <td class="text-left" [ngStyle]="data.rowColorStyle">{{dateFormat(data.LoginTime)}}</td>
+                                            <td class="text-left" [ngStyle]="data.rowColorStyle">{{data.Comment }}</td>
                                         </tr>
                                     </tbody>
                                 </table>
