--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -468,8 +468,8 @@
                         [disabled]="!f1.valid || this.GstTypeDis || !fp.valid" mat-raised-button
                         color="primary">PreOder</button>
                     <button *ngIf="BillItem.Manual" type="submit"
-                        [disabled]="!f1.valid || !fp.valid || this.BillItem.Quantity === 0 || this.GstTypeDis " mat-raised-button
-                        color="primary">Manual</button>
+                        [disabled]="!f1.valid || !fp.valid && this.BillItem.Quantity === 0 || this.GstTypeDis " mat-raised-button
+                        color="primary" >Manual</button>
                 </div>
             </div>
             <!-- services calclution -->
