--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -966,6 +966,7 @@
 
                     <button [disabled]="this.BillLink == ''" (click)="sendWhatsapp('bill')" class="bgRemove whatsappBill ms-lg-2 me-lg-1 ms-3 me-3"><i  class="fa-brands fa-whatsapp "></i></button>
                     <button class="bgRemove"><i class="fa-solid fa-envelope EmailBill"></i></button>
+                    <button [disabled]="this.BillLink == ''" (click)="sendWhatsapp('Fbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-3 me-3"><i  class="fa-brands fa-whatsapp "></i> Final</button>
                 </div>
             </div>
         </form>
