--- a/web1/src/styles.scss
+++ b/web1/src/styles.scss
@@ -29,6 +29,11 @@ html body {
     zoom: 100%
 }
 
+.mat-option:hover:not(.mat-option-disabled), .mat-option:focus:not(.mat-option-disabled) {
+    background: rgb(30 38 114) !important;
+    color: white !important;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
