--- a/web1/src/app/report/sale-report/sale-report.component.css
+++ b/web1/src/app/report/sale-report/sale-report.component.css
@@ -64,3 +64,14 @@
     color: rgb(255, 255, 255) !important;
     background-color: rgb(242, 32, 32) !important;
 }
+.whatsappfBill {
+  font-size: 21px;
+  border: none;
+  border-radius: 5px;
+  background: #55c13e;
+  padding: 0px 0px;
+  color: #ffffff;
+  height: 29px;
+  width: 30px;
+  box-shadow: 1px 1px 10px #0003;
+}
