--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -379,7 +379,7 @@
                                                     <tr *ngFor="let d of BillMasterList; let i = index" text="left">
 
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}">
-                                                         {{i+1 }}   <button *ngIf="d.PaymentStatus === 'Paid'" (click)="sendWhatsapp(d,'bill')" class="bg_none whatsappfBill ms-lg-2 me-lg-1 ms-3 me-3">
+                                                         {{i+1 }}   <button *ngIf="d.PaymentStatus === 'Unpaid'" (click)="sendWhatsapp(d,'bill')" class="bg_none whatsappfBill ms-lg-2 me-lg-1 ms-3 me-3">
                                                             <i  class="fa-brands fa-whatsapp "></i>
                                                         </button>
                                                              
