--- a/web1/src/app/report/expense/expense.component.html
+++ b/web1/src/app/report/expense/expense.component.html
@@ -154,7 +154,7 @@
                                                 <td *ngIf="columnVisibility.GivenTo"      ></td>
                                                 <td *ngIf="columnVisibility.PaymentMode"  ></td>
                                                 <td *ngIf="columnVisibility.CashType"     ></td>
-                                                <td *ngIf="columnVisibility.Amount"       ></td>
+                                                <td *ngIf="columnVisibility.Amount"       >{{this.totalAmt}}</td>
                                                 <td *ngIf="columnVisibility.ShopName"     ></td>
                                             </tr>
                                         </thead>
