--- a/server/views/AssignLensPDF.ejs
+++ b/server/views/AssignLensPDF.ejs
@@ -131,19 +131,25 @@
                 <% } %>
             </table>
             <table style="width: 100%; ">
-                <thead>
-                    <tr style="text-align: left;">
-                        <th> Product Description  </th>
-                        <th> Remarks </th>
-                      </tr>
-                </thead>
-              <tbody>
-                <tr>
-                    <td><%=i.s%> </td>
-                    <td><%=i.R%> </td>
+              <thead>
+                <tr style="text-align: left;">
+                    <th>S No.</th>
+                    <th> Product Description  </th>
+                    <th> Remarks </th>
                   </tr>
-              </tbody>
-             
+            </thead>
+          <tbody>
+            
+            <% for (let j = 0; j < i.s.length || j < i.R.length; j++) { %>
+                <tr>
+                    <td><%= j + 1 %></td> 
+                  <td><%= j < i.s.length ? i.s[j] : '' %></td>
+                  <td><%= j < i.R.length ? i.R[j] : '' %></td>
+
+                </tr>
+              <% } %>
+              
+          </tbody>
             </table>
   
     </section>
