--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -70,6 +70,7 @@
                                                     <mat-option value="DR.">Dr.</mat-option>
                                                     <mat-option value="ADV.">ADV.</mat-option>
                                                     <mat-option value="Smt.">Smt.</mat-option>
+                                                    <mat-option value="Mst.">Mst.</mat-option>
                                                 </mat-select>
                                             </mat-form-field>
                                         </div>
