--- a/web1/src/app/common/about/about.component.html
+++ b/web1/src/app/common/about/about.component.html
@@ -7,13 +7,23 @@
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-12 p-0 ps-3">
-                                    <h2 style="color: #ff0000;">Opticalguru New Updates Date 01-12-2024
+                                    <h2 style="color: #ffea00;">Opticalguru New Updates 
                                     </h2>
                                 </div>
                             </div>
                         </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
                            <div class="col-12" style="font-size: 20px; line-height: 30px;">
+                               <h2 style="color: #ffea00;"> New Updates Date 17-01-2024 </h2>
+                               <P>1. Expenses Report Total Calculation Done.</P>
+                               <P>2. Expenses type filter done on expenses Report.</P>
+                               <P>3. Date auto fill on the expenses page.</P>
+                               <P>3. Reminder pop up correct.</P>
+                            </div>
+                        </div>
+                        <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
+                           <div class="col-12" style="font-size: 20px; line-height: 30px;">
+                                <h2 style="color: #ffea00;">Updates Date 12-01-2024 </h2>
                                <P>1. Add the WhatsApp button on the billing page for the final delivery message.</P>
                                <P>2. Add the WhatsApp button on the sale Report page to send a message to the customer " your balance amount due please clear today"</P>
                                <P>Follow few steps</P>
@@ -22,7 +32,7 @@
                                         <li>Click on the Report option on the menu bar </li>
                                         <li>Click on the sale Report</li>
                                         <li>Select Date Range with filter payment status unpaid option</li>
-                                        <li>  Click on the search button</li>
+                                        <li>Click on the search button</li>
                                         <li>There is a whatsapp button</li>
                                         <li>Click and send sms </li>
                                     </ul>
