--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1209,7 +1209,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label style="color: rgb(255 0 0) !important;letter-spacing: 1px; font-weight: 800;">Balance</mat-label>
                         <input class="redclass" type="number" min="0" style="color: rgb(255 0 0 / 75%) !important;"
-                            matInput name="Total Amount" value="{{ this.applyPayment.PayableAmount.toFixed(2)}}" disabled
+                            matInput name="Total Amount" value="{{ this.applyPayment.PayableAmount}}" disabled
                             #TOutstandingcontrol [autocomplete]="false">
                     </mat-form-field>
                 </div>
