--- a/server/views/customerPowerPDF.ejs
+++ b/server/views/customerPowerPDF.ejs
@@ -53,8 +53,19 @@
             <p class="cus_p">Rx_By </p>
          </div>
          <div class="col-2">
-            <p class="cus_p"> : <%=data.customer.VisitDate%> </p>
+ 
+            <% if (data.mode === 'spectacle') { %>
+             <p class="cus_p"> : <%=data.spectacle.VisitDate%> </p>
+            <%} %>
+            <% if (data.mode === 'contact') { %>
+            <p class="cus_p"> : <%=data.contact.VisitDate%></p>
+            <%} %>
+            <% if (data.mode === 'other') { %>
+            <p class="cus_p"> : <%=data.other.VisitDate%></p>
+            <%} %>
+
             <p class="cus_p"> : <%=data.customer.PhoneNo%> </p>
+
             <% if (data.mode === 'spectacle') { %>
             <p class="cus_p"> : <%=data.spectacle.RefferedByDoc%></p>
             <%} %>
@@ -398,7 +409,7 @@
           <div class="col2">
             <h3 style="padding: 0;margin: 0;">.............................................</h3>
                <p style="padding: 0;margin: 0;">
-                  Bring this card on your next visit.
+                  Bring this card on your next visit. <br>
                   CHECK YEARLY, SEE CLEARLY
                </p>
           </div>
