--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -288,7 +288,7 @@
                                 </mat-error>
                             </mat-form-field>
                         </div>
-                        <div class="col-md-3 mb-0">
+                        <div class="col-lg-6 col-md-6 mb-0">
                             <mat-form-field class="example-full-width mb-0">
                                 <mat-label>BillName</mat-label>
                                 <input matInput name="BillName" [(ngModel)]="data.BillName" #BillNamecontrol>
