--- a/web1/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web1/src/app/inventory/product-transfer/product-transfer.component.html
@@ -15,7 +15,7 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Search By BarCode</mat-label>
                                         <input matInput name="SearchBarCode" [(ngModel)]="Req.SearchBarCode"
-                                            (keydown.Tab)="getProductDataByBarCodeNo()" required #SearchBarCodecontrol
+                                            (blur)="getProductDataByBarCodeNo()" required #SearchBarCodecontrol
                                             [autocomplete]="false" appAutoFoucsDirectives>
                                     </mat-form-field>
                                 </div>
