--- a/web1/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web1/src/app/inventory/purchase-return/purchase-return.component.html
@@ -67,7 +67,7 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Search By BarCode</mat-label>
                                         <input matInput name="SearchBarCode" [(ngModel)]="Req.SearchBarCode"
-                                            (keydown.Tab)="getProductDataByBarCodeNo()" required #SearchBarCodecontrol
+                                            (blur)="getProductDataByBarCodeNo()" required #SearchBarCodecontrol
                                             #GSTNocontrol [autocomplete]="false" appAutoFoucsDirectives>
                                     </mat-form-field>
                                 </div>
