--- a/web1/src/app/inventory/search-barcode/search-barcode.component.html
+++ b/web1/src/app/inventory/search-barcode/search-barcode.component.html
@@ -15,7 +15,7 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Search By BarCode</mat-label>
                                         <input matInput name="SearchBarCode" [(ngModel)]="SearchBarCode"
-                                            (keydown.Tab)="getBarcodeDataByBarcodeNo('search')" required
+                                            (blur)="getBarcodeDataByBarcodeNo('search')" required
                                             #SearchBarCodecontrol #GSTNocontrol [autocomplete]="false"
                                             appAutoFoucsDirectives>
                                     </mat-form-field>
