--- a/web1/src/app/admin/employee/employee.component.html
+++ b/web1/src/app/admin/employee/employee.component.html
@@ -117,6 +117,11 @@
                                                     [(ngModel)]="data.CommissionValueNB" #CommissionValueNBcontrol required>
                                             </mat-form-field>
                                         </div>
+                                        <div class="col-md-4 col-sm-6 col-6 ">
+                                            <mat-slide-toggle type="ratio" name="DiscountPermission" color="primary"
+                                                [(ngModel)]="data.DiscountPermission" class="example-margin">Discount Permission After The Bill
+                                            </mat-slide-toggle>
+                                        </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
