--- a/web1/src/app/common/login.component.html
+++ b/web1/src/app/common/login.component.html
@@ -1,8 +1,8 @@
 
 <div class="container-fluid bb p-5 Bgm">
-  <audio controls autoplay style="display: none;">
+  <!-- <audio controls autoplay style="display: none;">
     <source src="../../assets/images/ram.mp3" type="audio/ogg" auto>
-  </audio>
+  </audio> -->
   <div class="row">
     <div class="container ">
       <div class="row mt-5 mt-sm-0">
