--- a/web1/src/app/common/login.component.css
+++ b/web1/src/app/common/login.component.css
@@ -6,9 +6,9 @@ body {
 }
 
 .Bgm{
-  background-image: url(../../assets/images/ram.jpg);
+  background-image: url(../../assets/images/ram.png);
   background-repeat: no-repeat;
-  background-size: 100% 120%;
+  background-size: 100% 100%;
   height: 100vh;
 }
 
@@ -194,7 +194,7 @@ h4:hover {
   padding: 40px;
   top: 50%;
   left: 50%;
-  background: rgb(25, 19, 80);;
+  background: rgba(0, 0, 0, 0);;
   text-align: center;
   transition: 0.25s;
   margin-top: 10px;
@@ -242,7 +242,7 @@ h4:hover {
 
 
 .box h1 {
-  color: white;
+  color: black;
   text-transform: uppercase;
   font-weight: 500
 }
@@ -336,7 +336,7 @@ a.socialIcon:hover,
 }
 
 .social-circle i {
-  color: #fff;
+  color: #000;
   transition: all 0.8s;
   transition: all 0.8s;
 
@@ -347,7 +347,7 @@ a.socialIcon:hover,
   padding: 2% 11%;
   border: 2px solid rgb(255, 81, 0);
   border-radius: 23px;
-  color: #fff;
+  color: black;
   margin: 5% 0;
   transition: .5s;
 }
@@ -897,7 +897,9 @@ html {
     bottom: 100vh;
   }
 }
-
+.tagline{
+  color: #000;
+}
 
 @media only screen and (max-width: 700px) and (min-width: 300px) {
 
@@ -971,5 +973,31 @@ html {
     border-radius: 20px;
   }
 
+}
+
+@media only screen and (max-width: 512px) and (min-width: 300px) {
+  .Bgm {
+    background-image: url(../../assets/images/ram.png);
+    background-repeat: no-repeat;
+    background-size: 100% 21% !important;
+    height: 0vh !important;
+}
+.logibtn {
+  background: #0000;
+  padding: 2% 11%;
+  border: 2px solid rgb(255, 81, 0);
+  border-radius: 23px;
+  color: white;
+  margin: 5% 0;
+  transition: .5s;
+}
+.box h1 {
+  color: white;
+  text-transform: uppercase;
+  font-weight: 500
+}
+.tagline{
+  color: white;
+}
 
 }
