--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -1789,7 +1789,7 @@
                                                 </div>
                                                 <div class="col-xl-3 col-lg-3  col-md-6 col-sm-6 col-6 mb-0">
                                                     <mat-form-field class="example-full-width mb-0">
-                                                        <mat-label>Shade</mat-label>
+                                                        <mat-label>Other/Shade</mat-label>
                                                         <input matInput name="Shade" [(ngModel)]="spectacle.Shade" />
                                                     </mat-form-field>
                                                 </div>
