--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1,7 +1,7 @@
 
 <div  class="card billCrad" *ngIf="this.CustomerView == true">
     <div class="header">
-        <div class="row">
+        <div class="row " style="background:#d9d9d9">
             <div class="col-lg-1 col-md-2 col-6">
                 <h4 style="font-weight: 800;">New Bill </h4>
             </div>
@@ -14,7 +14,7 @@
     </div>
     <div class="body">
         <form #f="ngForm" autocomplete="off">
-            <div class="row">
+            <div class="row " style="background:#d9d9d9;">
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 pr-2 pr-md-0 pl-2 pl-md-0 ">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Invoice No.</mat-label>
@@ -128,7 +128,7 @@
                     </span>
                 </div>
             </div>
-            <div class="row rowModify" *ngIf="category !== 'Services'">
+            <div class="row rowModify pt-2" *ngIf="category !== 'Services'">
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>BarCode</mat-label>
@@ -321,7 +321,7 @@
         </form>
 
         <form #f1="ngForm" (ngSubmit)="addItem()">
-            <div class="row row rowModify" *ngIf="category !== 'Services' && BillItem.Manual === false">
+            <div class="row row rowModify " *ngIf="category !== 'Services' && BillItem.Manual === false">
                 <div class="col-xl-4 col-lg-4 col-md-9 col-8 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Product Name</mat-label>
@@ -349,7 +349,7 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="row" *ngIf="category !== 'Services'">
+            <div class="row mt-3" *ngIf="category !== 'Services'">
                 <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0 col-1Modify">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Unit Price</mat-label>
