--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -204,8 +204,8 @@
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-xl-5 col-lg-8 col-md-6 col-12 mb-0 mb-4 mb-md-0 ms-auto">
-                                            <button *ngIf="id != 0" class="me-2" mat-raised-button color="primary"
+                                        <div class="col-xl-8 col-lg-9 col-md-9 col-12 mb-0 mb-4 mb-md-0 ms-auto" style="text-align:right;">
+                                            <button *ngIf="id != 0" class="me-2 " mat-raised-button color="primary"
                                                 style="padding: 0px 10px;"
                                                 [routerLink]="['/sale/oldBilllist/',data.ID]">Old Bill
                                             </button>
