--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -429,7 +429,7 @@
                         <ul class="ul1" <% %> style="font-size:<%= data.CustomerFont %> ; line-height:<%=
                                     data.CustomerLineSpace %>;">
                                     <% if (data.shopdetails.SubTotal==="true" ){%>
-                                        <li>Sub Total</li>
+                                        <li>Total</li>
                                         <%}%>
 
                                             <% if (data.shopdetails.Discounts==="true" ){%>
@@ -447,7 +447,7 @@
                                                         </li>
                                                         <%}%>
 
-                                                            <li>Round Off </li>
+                                                            <li>A Discount</li>
                                                             <li <% %> style="border: 1px solid <%= data.Color %>;">Grand
                                                                     Total </li>
                                                             <li>Advance </li>
